@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -54,7 +53,7 @@ public class WalletJpaAdapter implements WalletRepositoryPort {
         return walletRepository.findByUser_Id(userId)
                 .stream()
                 .map(walletEntityMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
